// Generated by tool. DO NOT EDIT!
// source: IN_Data.xlsx
// haogang.chen@nebuliumgames.com 

import "GameConfigReward.proto";

option java_package = "com.nb";
option java_outer_classname = "GameConfigTaskMsg";
message GameConfigTask
{
    required int32 typeId = 1;
    required string taskType = 2;
    required string finishType = 3;
    required int32 finishValue = 4;
    required string npc = 5;
    required string NPCName = 6;
    repeated GameConfigReward rewards = 7;
    required int32 requireQuestId = 8;
    required bool abandoned = 9;
}