// Generated by tool. DO NOT EDIT!
// source: IN_Data.xlsx
// haogang.chen@nebuliumgames.com 


option java_package = "com.nb";
option java_outer_classname = "GameConfigSummonMsg";
message GameConfigSummon
{
    required string type = 1;
    required int32 typeId = 2;
    required int32 coinCost = 3;
    required int32 gemCost = 4;
    required int32 freeInterval = 5;
    required int32 freeAmountPerDay = 6;
    required int32 advCount = 7;
}